--- a/project_task_activity/view/project_view.xml
+++ b/project_task_activity/view/project_view.xml
@@ -46,12 +46,15 @@
             <field name="name">project.task_activity.tree</field>
             <field name="model">project.task.activity</field>
             <field name="arch" type="xml">
-                <tree colors="gray:state == 'cancel';blue:state == 'pending'">
+                <tree colors="gray:state == 'cancel';blue:state == 'pending'" editable="top">
                     <field name="name"/>
                     <field name="user_id"/>
                     <field name="planned_date"/>
                     <field name="done_date"/>
-                    <field name="state"/>
+                    <field name="state" readonly="1"/>
+                    <button name="action_done" string="Done" type="object" icon="gtk-go-forward" help="Done" attrs="{'invisible':[('state','!=','pending'),('state','!=','cancel')]}"/>
+                    <button name="action_done" string="Pending" type="object" icon="gtk-go-back" help="Pending" attrs="{'invisible':[('state','!=','done')]}"/>
+                    <button name="action_cancel" string="Cancel" type="object" icon="gtk-cancel" help="Cancel" attrs="{'invisible':[('state','=','cancel')]}"/>
                     <field name="description"/>
                 </tree>
             </field>
