--- a/project_task_activity/view/project_view.xml
+++ b/project_task_activity/view/project_view.xml
@@ -49,6 +49,7 @@
                 <tree colors="gray:state == 'cancel';blue:state == 'pending'" editable="top">
                     <field name="name"/>
                     <field name="user_id"/>
+                    <field name="task_id"/>
                     <field name="planned_date"/>
                     <field name="done_date"/>
                     <field name="state" readonly="1"/>
