--- a/project_kanban_open_project/view/project_view.xml
+++ b/project_kanban_open_project/view/project_view.xml
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-       
-
         <record id="project_kanban_mod_form" model="ir.ui.view">
             <field name="name">project_stage_click.kanban</field>
             <field name="model">project.project</field>
             <field name="inherit_id" ref="project.view_project_kanban"/>
             <field name="arch" type="xml">
-                <!--<a t-if="record.use_tasks.raw_value" position="attributes">-->
                 <a name="%(project.act_project_project_2_project_task_all)d" position="attributes">
-                    <attribute name="type">edit</attribute>
+                    <attribute name="type">open</attribute>
                 </a>
-                <!--<t t-raw="record.task_count.raw_value" position="replace">-->
-                <!--</t>-->
-                <div class="o_project_kanban_boxes" position="before">
-                    <div class="oe_kanban_content">
-                        <a t-if="record.use_tasks.raw_value" name="%(project.act_project_project_2_project_task_all)d" type="action" style="margin-right: 10px">
-                            <t t-raw="record.task_count.raw_value"/> Tasks
-                        </a>
-                    </div>
-                </div>
             </field>
         </record>
     </data>
