--- a/project_task_activity/view/activities_menuitem.xml
+++ b/project_task_activity/view/activities_menuitem.xml
@@ -4,14 +4,22 @@
 <openerp>
     <data>
 
+        <record id="action_task_activity" model="ir.actions.act_window">
+            <field name="name">Activities Task</field>
+            <field name="res_model">project.task.activity</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{
+                'search_default_task_id': [active_id],
+                'default_task_id': active_id,
+            }</field>
+        </record>
+
         <record id="action_activity" model="ir.actions.act_window">
             <field name="name">Activities</field>
             <field name="res_model">project.task.activity</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
-            <field name="view_id" ref=""/>
-            <field name="search_view_id" ref=""/>
-            <field name="domain">[]</field>
         </record>
 
         <menuitem
@@ -20,7 +28,6 @@
             sequence="10"
             action="action_activity"
             parent="project.menu_project_management"
-            
             />
 
     </data>
