--- a/project_task_activity/view/task_view.xml
+++ b/project_task_activity/view/task_view.xml
@@ -33,12 +33,17 @@
             <field name="inherit_id" ref="project.view_task_kanban"/>
             <field name="arch" type="xml">
                 <field name="tag_ids" position="after">
-                    <field name="activities_progress"/>
+                    <field name="activities_done"/>
+                    <field name="activities_total"/>
                     <field name="activity_ids" invisible="1"/>
                 </field>
                 <xpath expr="//div[@class='pull-left']" position="before">
-                    <div class="pull-left" groups="base.group_user">
-                        <field name="activities_progress" attrs="{'invisible':[('activity_ids', '=', [])]}" widget="sparkline_bar"/>
+                    <div class="pull-left" groups="base.group_user" attrs="{'invisible':[('activity_ids', '=', [])]}">
+                        <a name="%(project_task_activity.action_task_activity)d" type="action">
+                            Activities : 
+                            <field name="activities_done"/> /
+                            <field name="activities_total"/>  
+                        </a>
                     </div>
                 </xpath>
             </field>
