--- a/project_category/view/project_view.xml
+++ b/project_category/view/project_view.xml
@@ -22,10 +22,8 @@
             <field name="model">project.project</field>
             <field name="inherit_id" ref="project.edit_project"/>
             <field name="arch" type="xml">
-                <field name="partner_id" position="after">
-                    <group colspan="4">
-                        <field name="type_id"/>
-                    </group>
+                <field name="user_id" position="after">
+                    <field name="type_id"/>
                 </field>
             </field>
         </record>
