--- a/project_usability/views/project_view.xml
+++ b/project_usability/views/project_view.xml
@@ -26,8 +26,9 @@
                         <field name="date" class="oe_inline"/>
                     </div>
                 </field>
+                <field name="analytic_account_id" position="replace"/>
                 <field name="sequence" position="before">
-                    <field name="analytic_account_id"/>
+                    <field name="analytic_account_id" required="False"/>
                 </field>
             </field>
         </record>
