FIX user and analytic_account_id not requiered technical features

--- a/project_usability/views/project_view.xml
+++ b/project_usability/views/project_view.xml
@@ -13,6 +13,12 @@
                         <field name="date" class="oe_inline"/>
                     </div>
                 </field>
+                <field name="user_id" position="attributes">
+                    <attribute name="groups"></attribute>
+                </field>
+                <xpath expr="//notebook//group[@groups='base.group_no_one']" position="attributes">
+                    <attribute name="groups"></attribute>
+                </xpath>
                 <field name="analytic_account_id" position="replace"/>
                 <field name="sequence" position="before">
                     <field name="analytic_account_id" required="False"/>
