--- a/project_usability/views/project_view.xml
+++ b/project_usability/views/project_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<openerp>
+<odoo>
     <data>
         <record id="edit_project" model="ir.ui.view">
             <field name="name">project.project.inherit</field>
@@ -25,5 +25,21 @@
                 </field>
             </field>
         </record>
+
+        <record id="view_task_form2" model="ir.ui.view">
+            <field name="name">project.task2.inherit</field>
+            <field name="model">project.task</field>
+            <field name="inherit_id" ref="project.view_task_form2"/>
+            <field name="arch" type="xml">
+                <h1 class="o_row" position="before">
+                    <h2 class="o_row">
+                        <field name="template_task_id" placeholder="Task Template" class="oe_edit_only"/>
+                    </h2>
+                </h1>
+                <field name="partner_id" position="after">
+                    <field name="template_task"/>
+                </field>
+            </field>
+        </record>
     </data>
-</openerp>
+</odoo>
