[REL] replace openerp by odoo on xml files

--- a/project_description/view/project_view.xml
+++ b/project_description/view/project_view.xml
@@ -24,7 +24,7 @@
 <!-- project_tags.project -->
 <!-- project.project -->
 <!-- project.project -->
-<openerp>
+<odoo>
     <data>
 
  
@@ -43,6 +43,6 @@
         </record>
 
     </data>
-</openerp>
+</odoo>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
      -->
