--- a/project_kanban_open_project/view/project_view.xml
+++ b/project_kanban_open_project/view/project_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         <record id="project_kanban_mod_form" model="ir.ui.view">
             <field name="name">project_stage_click.kanban</field>
@@ -14,4 +14,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
