--- a/project_related_projects/view/project_related_projects_menuitem.xml
+++ b/project_related_projects/view/project_related_projects_menuitem.xml
@@ -22,9 +22,9 @@
 ##############################################################################
 
 -->
-<openerp>
+<odoo>
     <data>
     </data>
-</openerp>
+</odoo>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
      -->
