--- a/project_related_projects/view/project_view.xml
+++ b/project_related_projects/view/project_view.xml
@@ -24,7 +24,7 @@
 <!-- project_tags.project -->
 <!-- project.project -->
 <!-- project.project -->
-<openerp>
+<odoo>
     <data>
 
         <!-- INHERITED SEARCH -->
@@ -67,6 +67,6 @@
         </record> -->
 
     </data>
-</openerp>
+</odoo>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
      -->
