--- a/project_stage/view/menu_item.xml
+++ b/project_stage/view/menu_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <record id="action_project_stage" model="ir.actions.act_window">
@@ -15,4 +15,4 @@
             action="action_project_stage"
             sequence="4"/>
     </data>
-</openerp>
+</odoo>
