--- a/project_stage/view/project_view.xml
+++ b/project_stage/view/project_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
        <record id="project_form" model="ir.ui.view">
             <field name="name">project_stage.form.inherit</field>
@@ -64,4 +64,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
