--- a/project_tags/view/project_view.xml
+++ b/project_tags/view/project_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <!-- INHERITED SEARCH -->
@@ -47,6 +47,6 @@
         </record>
 
     </data>
-</openerp>
+</odoo>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
      -->
