--- a/project_task_activity/view/activities_menuitem.xml
+++ b/project_task_activity/view/activities_menuitem.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<openerp>
+<odoo>
     <data>
 
         <record id="action_task_activity" model="ir.actions.act_window">
@@ -31,4 +31,4 @@
             />
 
     </data>
-</openerp>
+</odoo>
