--- a/project_task_activity/view/project_view.xml
+++ b/project_task_activity/view/project_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <record id="view_project_task_activity_search" model="ir.ui.view">
@@ -97,4 +97,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
