--- a/project_task_activity/view/task_view.xml
+++ b/project_task_activity/view/task_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <record id="view_project_task_form" model="ir.ui.view">
@@ -49,4 +49,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
