--- a/project_task_issues/view/task_issue_view.xml
+++ b/project_task_issues/view/task_issue_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
 	<data>
         <record id="view_task_issue_form" model="ir.ui.view">
             <field name="name">project.task.issue.form</field>
@@ -29,4 +29,4 @@
             </field>
         </record>
 	</data>
-</openerp>
+</odoo>
