--- a/project_usability_issue/views/project_view.xml
+++ b/project_usability_issue/views/project_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<openerp>
+<odoo>
     <data>
         <record id="view_project_issue_filter" model="ir.ui.view">
             <field name="name">project.issue.filter.inherit</field>
@@ -34,4 +34,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
