[IMP] introduce to project_ux the  funcionality in the project_kanban_open_project module

--- a/project_ux/views/project_project_views.xml
+++ b/project_ux/views/project_project_views.xml
@@ -40,6 +40,7 @@
                 <field name="sub_task_count"/>
             </field>
             <a name="%(project.act_project_project_2_project_task_all)d" position="before">
+                <a type="open"/>
                 <a class="o_project_kanban_box" name="%(act_project_project_2_project_sub_task_all)d" type="action">
                     <div>
                         <span class="o_value"><t t-esc="record.sub_task_count.value"/></span>
@@ -47,7 +48,6 @@
                     </div>
                 </a>
             </a>
-                
         </field>
     </record>
 </odoo>
