[IMP] add chatter again on project form

--- a/project_ux/views/project_project_views.xml
+++ b/project_ux/views/project_project_views.xml
@@ -28,6 +28,9 @@
                     <field name="type_ids"/>
                 </page>
             </xpath>
+            <div class="oe_chatter">
+                <field name="message_ids" widget="mail_thread"/>
+            </div>
         </field>
     </record>
 
