--- a/project_ux/views/project_project_views.xml
+++ b/project_ux/views/project_project_views.xml
@@ -44,7 +44,7 @@
             </field>
             <a name="%(project.act_project_project_2_project_task_all)d" position="before">
                 <a type="open"/>
-                <a class="o_project_kanban_box" name="%(act_project_project_2_project_sub_task_all)d" type="action">
+                <a class="o_project_kanban_box" name="%(act_project_project_2_project_sub_task_all)d" type="action" groups="project.group_subtask_project">
                     <div>
                         <span class="o_value"><t t-esc="record.sub_task_count.value"/></span>
                         <span class="o_label">Sub<t t-esc="record.label_tasks.value"/></span>
