--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -49,9 +49,10 @@
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_search_form"/>
         <field name="arch" type="xml">
-            <filter name="my_tasks" position="after">
+            <filter name="message_needaction" position="before">
                 <filter string="Is Task" name="is_task" domain="[('parent_id','=', False)]"/>
                 <filter string="Is Sub-Task" name="is_sub_task" domain="[('parent_id','!=', False)]"/>
+                <separator/>
             </filter>
             <filter name="User" position="before">
                 <filter string="Parent Task" context="{'group_by':'parent_id'}"/>
