--- a/project_stage/static/src/less/kanban_dashboard.less
+++ b/project_stage/static/src/less/kanban_dashboard.less
@@ -1,7 +1,5 @@
 // ------- Kanban dashboard variables -------
 
-.o_kanban_view.o_kanban_dashboard {
-    // We use this again because in the kanban view
-    //  we want it to show the columns correctly when adding stages
-    .o-flex-flow(row, nowrap);
+.o_kanban_dashboard_project {
+    .o-flex-flow(row, nowrap) !important;
 }
