--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -6,6 +6,7 @@
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="arch" type="xml">
+            <field name="child_ids" position="replace"/>
             <h1 class="o_row" position="before">
                 <h2 class="o_row">
                     <field name="template_task_id" placeholder="Task Template" class="oe_edit_only" context="{'default_template_task': 1}"/>
@@ -14,6 +15,25 @@
             <field name="partner_id" position="after">
                 <field name="template_task"/>
             </field>
+            <page name="extra_info" position="after">
+                <page name="subtasks" string="Subtasks" attrs="{'invisible': [('parent_id', '!=', False)]}">
+                    <field name="child_ids">
+                        <tree>
+                            <field name="sequence" invisible="1"/>
+                            <field name="name"/>
+                            <field name="user_id"/>
+                            <field name="planned_hours"/>
+                            <field name="remaining_hours"/>
+                            <field name="priority"/>
+                            <field name="tag_ids" invisible="1"/>
+                            <field name="notes" invisible="1"/>
+                            <field name="color" invisible="1"/>
+                            <field name="description" invisible="1"/>
+                            <field name="displayed_image_id" invisible="1"/>
+                        </tree>
+                    </field>
+                </page>
+            </page>
         </field>
     </record>
 
