--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -17,14 +17,19 @@
             </field>
             <page name="extra_info" position="after">
                 <page name="subtasks" string="Subtasks" attrs="{'invisible': [('parent_id', '!=', False)]}">
-                    <field name="child_ids">
-                        <tree>
+                    <!-- 'default_name': name + ':' -->
+                    <field name="child_ids" context="{'default_parent_id': id, 'default_project_id': subtask_project_id, 'default_partner_id': partner_id}">
+                        <tree editable ="bottom" decoration-danger="date_deadline and (date_deadline&lt;current_date)">
                             <field name="sequence" invisible="1"/>
                             <field name="name"/>
+                            <field name="project_id"/>
                             <field name="user_id"/>
                             <field name="planned_hours"/>
-                            <field name="remaining_hours"/>
+                            <field name="remaining_hours" widget="float_time" sum="Remaining Hours" readonly="1"/>
+                            <field name="date_deadline" invisible="context.get('deadline_visible',True)"/>
+                            <field name="stage_id"/>
                             <field name="priority"/>
+                            <field name="parent_id" invisible="1"/>
                             <field name="tag_ids" invisible="1"/>
                             <field name="notes" invisible="1"/>
                             <field name="color" invisible="1"/>
@@ -36,6 +41,8 @@
             </page>
         </field>
     </record>
+
+
 
     <record id="view_task_form2_subtask" model="ir.ui.view">
         <field name="name">project.task2.inherit.subtask</field>
@@ -90,8 +97,7 @@
             'default_project_id': active_id,
         }</field>
         <field name="domain">[('parent_id','!=', False)]</field>
-        <field name="view_ids"
-                   eval="[(5,0,0),(0, 0, {'view_mode': 'kanban', 'view_id': ref('view_task_kanban_inherit')}),
+        <field name="view_ids" eval="[(5,0,0),(0, 0, {'view_mode': 'kanban', 'view_id': ref('view_task_kanban_inherit')}),
                    (0, 0, {'view_mode': 'form', 'view_id': ref('view_task_form2_subtask')})]"/>
         <field name="search_view_id" ref="project.view_task_search_form"/>
     </record>
