[IMP] somo improvemtn to project_ux
* [IMP]  contrains to change the projec to subtasks when change the project to the parent task
* [IMP] widget priority to the  field in tree subtask view

--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -28,7 +28,7 @@
                             <field name="remaining_hours" widget="float_time" sum="Remaining Hours" readonly="1"/>
                             <field name="date_deadline" invisible="context.get('deadline_visible',True)"/>
                             <field name="stage_id"/>
-                            <field name="priority"/>
+                            <field name="priority" widget="priority"/>
                             <field name="parent_id" invisible="1"/>
                             <field name="tag_ids" invisible="1"/>
                             <field name="notes" invisible="1"/>
