--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -27,7 +27,7 @@
                             <field name="planned_hours"/>
                             <field name="remaining_hours" widget="float_time" sum="Remaining Hours" readonly="1"/>
                             <field name="date_deadline" invisible="context.get('deadline_visible',True)"/>
-                            <field name="stage_id"/>
+                            <field name="stage_id" options="{'no_create': True, 'no_open': True}"/>
                             <field name="priority" widget="priority"/>
                             <field name="parent_id" invisible="1"/>
                             <field name="tag_ids" invisible="1"/>
