--- a/project_task_issues/view/task_issue_view.xml
+++ b/project_task_issues/view/task_issue_view.xml
@@ -4,6 +4,7 @@
         <record id="view_task_issue_form" model="ir.ui.view">
             <field name="name">project.task.issue.form</field>
             <field name="model">project.task</field>
+            <field name="priority">50</field>
             <field name="inherit_id" ref="project.view_task_form2"/>
             <field name="arch" type="xml">
                 <field name="date_deadline" position="after">
