--- a/project_stage/static/src/less/kanban_dashboard.less
+++ b/project_stage/static/src/less/kanban_dashboard.less
@@ -1,5 +1,5 @@
 // ------- Kanban dashboard variables -------
 
 .o_kanban_dashboard_project {
-    .o-flex-flow(row, nowrap) !important;
+    flex-flow: row, nowrap !important;
 }
