--- a/project_ux/static/src/less/kanban_dashboard.less
+++ b/project_ux/static/src/less/kanban_dashboard.less
@@ -1,5 +1,5 @@
 .o_project_kanban_box {
-    &:nth-child(2){
-        width: 33.33% !important;
-    }
+    width: fit-content;
+    margin: 0px 5px;
+    white-space: nowrap;
 }
