--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -9,24 +9,15 @@
             <button name="action_assign_to_me" position="attributes">
                 <attribute name="attrs">{}</attribute>
             </button>
-            <field name="child_ids" position="replace"/>
-            <h1 class="d-flex flex-row justify-content-between" position="before">
-                <h2 class="o_row">
-                    <field name="template_task_id" placeholder="Task Template" class="oe_edit_only" context="{'default_template_task': 1}"/>
-                </h2>
-            </h1>
-            <field name="partner_id" position="after">
-                <field name="template_task"/>
-            </field>
             <page name="extra_info" position="after">
                 <page name="subtasks" string="Subtasks" attrs="{'invisible': [('parent_id', '!=', False)]}" groups="project.group_subtask_project">
-                    <field name="child_ids" context="{'default_parent_id': id, 'default_project_id': subtask_project_id, 'default_partner_id': partner_id}">
+                    <field name="child_ids" context="{'default_parent_id': id, 'default_project_id': project_id, 'default_partner_id': partner_id}">
                         <tree editable ="bottom" decoration-danger="date_deadline and (date_deadline&lt;current_date)">
                             <field name="sequence" invisible="1"/>
                             <field name="company_id" invisible="1"/>
                             <field name="name"/>
                             <field name="project_id"/>
-                            <field name="user_id"/>
+                            <field name="user_ids" widget="many2many_avatar_user"/>
                             <field name="planned_hours"/>
                             <field name="date_deadline" invisible="context.get('deadline_visible',True)"/>
                             <field name="stage_id" options="{'no_create': True, 'no_open': True}"/>
@@ -43,8 +34,6 @@
         </field>
     </record>
 
-
-
     <record id="view_task_form2_subtask" model="ir.ui.view">
         <field name="name">project.task2.inherit.subtask</field>
         <field name="model">project.task</field>
@@ -52,7 +41,6 @@
         <field name="priority">90</field>
         <field name="mode">primary</field>
         <field name="arch" type="xml">
-            <field name="parent_id" position="replace"/>
             <field name="project_id" position="before">
                 <field name="parent_id" required="True" domain="[('project_id', '=', project_id)]"/>
             </field>
