[FIX] project_ux: fix kanban view of project and remove inherit of activities that odoo is incorporating by core.
closes ingadhoc/project#103

Signed-off-by: Nicolas Mac Rouillon <nmr@adhoc.com.ar>

--- a/project_ux/views/project_project_views.xml
+++ b/project_ux/views/project_project_views.xml
@@ -28,6 +28,9 @@
                 <field name="activity_ids"/>
                 <field name="activity_state"/>
             </field>
+            <xpath expr="/kanban//div[hasclass('o_kanban_record_bottom')]//a[@name='action_view_tasks']" position="before">
+                <a type="open" name="action_view_kanban_project"/>
+            </xpath>
         </field>
     </record>
 
