[IMP] project_ux: add button to avoid send emails on tasks
closes ingadhoc/project#104

Signed-off-by: Juan José Scarafía <jjs@adhoc.com.ar>

--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -9,6 +9,9 @@
             <button name="action_assign_to_me" position="attributes">
                 <attribute name="attrs">{}</attribute>
             </button>
+            <field name="recurring_task" position="after">
+                <field name="dont_send_stage_email" widget="boolean_toggle"/>
+            </field>
         </field>
     </record>
 
